# realtime-manifold-mesh-reconstructor

./: .gitignore  CMakeLists.txt  README.md
data/: sfm_data.json
include/core/: CameraPointsCollection.h  ConfigParser.h  Delaunay3DCellInfo.h  Delaunay3DVertexInfo.h  Exceptions.hpp  ManifoldManager.h  OutputManager.h  Ray.hpp  ReconstructFromSLAMData.h  ReconstructFromSfMData.h  SfMData.h  TriangulationManager.h  types_config.hpp  types_reconstructor.hpp
include/core/utilities/: Chronometer.h  Logger.h  utilities.hpp
include/example/: ORBIncrementalParser.h  ORBParser.h  OpenMvgParser.h  points_filtering.hpp
res/config/: default.json  default_simple.json
src/core/: CameraPointsCollection.cpp  ConfigParser.cpp  Delaunay3DCellInfo.cpp  Delaunay3DVertexInfo.cpp  ManifoldManager.cpp  OutputManager.cpp  ReconstructFromSLAMData.cpp  ReconstructFromSfMData.cpp  TriangulationManager.cpp
src/core/utilities/: Chronometer.cpp  Logger.cpp  utilities.cpp
src/example/: Main.cpp  Main_sfm.cpp  Main_slam.cpp  ORBIncrementalParser.cpp  ORBParser.cpp  OpenMvgParser.cpp  points_filtering.cpp
